--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,3 +2,12 @@ body {
 	background-color: hsl(0, 0%, 7%);
 	padding: 4rem;
 }
+
+.main {
+	border-top: 1px solid hsl(0, 0%, 15%);
+	border-bottom: 1px solid hsl(0, 0%, 15%);
+	color: hsl(240, 1%, 59%);
+	font-size: 1.5rem;
+	margin-block: 1rem;
+	padding-block: 2rem;
+}
