--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -5,7 +5,7 @@
 	margin-bottom: 35px;
 }
 
-.personal_best_container {
+.personalBestContainer {
 	display: flex;
 	align-items: center;
 	column-gap: 10px;
