--- a/src/components/Toolbar/toolbar.module.css
+++ b/src/components/Toolbar/toolbar.module.css
@@ -1,60 +1,64 @@
 .toolbar {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .gameInfo {
-	display: flex;
-	align-items: center;
-	gap: 20px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 
 .group {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	column-gap: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 10px;
 }
 
 .dt {
-	color: hsl(240, 1%, 59%);
-	font-size: 0.9rem;
-	font-weight: 500;
+  color: hsl(240, 1%, 59%);
+  font-size: 0.9rem;
+  font-size: 1.1vw;
+  font-size: .75rem;
+  font-size: clamp(0.75rem, 1.1vw, 0.9rem);
+  font-weight: 500;
 }
 
 .dd {
-	font-weight: bold;
+  font-size: clamp(0.75rem, 1.1vw, 0.9rem);
+  font-weight: bold;
 }
 
 .ddAccuracy {
-	color: hsl(354, 63%, 57%);
+  color: hsl(354, 63%, 57%);
 }
 
 .ddTime {
-	color: hsl(49, 85%, 70%);
+  color: hsl(49, 85%, 70%);
 }
 
 .ddWpm {
-	color: hsl(0, 0%, 100%);
+  color: hsl(0, 0%, 100%);
 }
 
 .gameConfigContainer {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	column-gap: 20px;
-	column-rule: solid 1px hsl(0, 0%, 15%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 20px;
+  column-rule: solid 1px hsl(0, 0%, 15%);
 }
 
 .pseudoLabel {
-	color: hsl(240, 1%, 59%);
-	font-size: 0.9rem;
-	font-weight: 300;
+  color: hsl(240, 1%, 59%);
+  font-size: clamp(0.75rem, 1.1vw, 0.9rem);
+  font-weight: 300;
 }
 
 .gameConfig {
-	display: flex;
-	align-items: center;
-	column-gap: 25px;
+  display: flex;
+  align-items: center;
+  column-gap: 25px;
 }
