refact(pill): a button represents pill component
The pill component is from now build from a button
element to be able to received focus and others
keyboard interactions, being updated its style to
remove some default rules applied by browser on the
button element.

--- a/src/components/Pill/pill.module.css
+++ b/src/components/Pill/pill.module.css
@@ -1,16 +1,17 @@
 .pill {
-  border-radius: 5px;
-  outline: 2px solid hsl(240, 3%, 46%);
-  cursor: pointer;
-  color: hsl(0, 0%, 100%);
-  font-size: clamp(.85rem, 1.2vw, 1rem);
-  text-wrap: nowrap;
-  text-overflow: ellipsis;
-  text-align: center;
-  padding-inline: 1.3rem;
+	background-color: transparent;
+	border: 2px solid hsl(240, 3%, 46%);
+	border-radius: 5px;
+	cursor: pointer;
+	color: hsl(0, 0%, 100%);
+	font-size: clamp(0.85rem, 1.2vw, 1rem);
+	text-wrap: nowrap;
+	text-overflow: ellipsis;
+	text-align: center;
+	padding: 5px 1.3rem;
 }
 
 .highlighted {
-  outline-color: hsl(214, 100%, 55%);
-  color: hsl(214, 100%, 55%);
+	border-color: hsl(214, 100%, 55%);
+	color: hsl(214, 100%, 55%);
 }
